ESLint fixing, after updating config for it

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,8 @@
 {
-  "Язык": "English",
+  "About": "About us",
+  "Loading": "Loading...",
+  "Main": "Main",
+  "Главная страница": "Main page",
   "Перевод": "Translate",
-  "Главная страница": "Main page"
+  "Язык": "English"
 }
