--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,8 @@
 {
-  "Язык": "Русский",
+  "About": "О проекте",
+  "Loading": "Загрузка...",
+  "Main": "Главная",
+  "Главная страница": "Главная страница",
   "Перевод": "Перевод",
-  "Главная страница": "Главная страницаи"
+  "Язык": "Русский"
 }
