change routeConfig structure + Add NotFoundPage

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,6 +2,7 @@
   "About": "About us",
   "Loading": "Loading...",
   "Main": "Main",
+  "Page not found": "Page not found",
   "Главная страница": "Main page",
   "Перевод": "Translate",
   "Язык": "English"
