--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,7 @@
   "About": "О проекте",
   "Loading": "Загрузка...",
   "Main": "Главная",
+  "Page not found": "Страница не найдена",
   "Главная страница": "Главная страница",
   "Перевод": "Перевод",
   "Язык": "Русский"
