--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,8 +1,10 @@
 {
   "About": "About us",
+  "Error message": "Something went wrong!",
   "Loading": "Loading...",
   "Main": "Main",
   "Page not found": "Page not found",
+  "update page": "Refresh the page",
   "Главная страница": "Main page",
   "Перевод": "Translate",
   "Язык": "English"
