--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,8 +1,10 @@
 {
   "About": "О проекте",
+  "Error message": "Что-то пошло не так!",
   "Loading": "Загрузка...",
   "Main": "Главная",
   "Page not found": "Страница не найдена",
+  "update page": "Обновить страницу",
   "Главная страница": "Главная страница",
   "Перевод": "Перевод",
   "Язык": "Русский"
