--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,11 +1,12 @@
 {
   "About": "О проекте",
   "Error message": "Что-то пошло не так!",
+  "Language": "Русский",
+  "Lng": "Ру",
   "Loading": "Загрузка...",
   "Main": "Главная",
   "Page not found": "Страница не найдена",
   "update page": "Обновить страницу",
   "Главная страница": "Главная страница",
-  "Перевод": "Перевод",
-  "Язык": "Русский"
+  "Перевод": "Перевод"
 }
