add Modal to Navbar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,6 +4,7 @@
   "Language": "English",
   "Lng": "En",
   "Loading": "Loading...",
+  "Log in": "Log in",
   "Main": "Main",
   "Page not found": "Page not found",
   "update page": "Refresh the page",
