--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,6 +4,7 @@
   "Language": "Русский",
   "Lng": "Ру",
   "Loading": "Загрузка...",
+  "Log in": "Войти",
   "Main": "Главная",
   "Page not found": "Страница не найдена",
   "update page": "Обновить страницу",
