entities/Counter:  - added example of component with redux  + tests for this component and all inside

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,6 +7,8 @@
   "Log in": "Log in",
   "Main": "Main",
   "Page not found": "Page not found",
+  "decrement": "Decrement",
+  "increment": "Increment",
   "update page": "Refresh the page",
   "Главная страница": "Main page",
   "Перевод": "Translate"
