added custom Input to LoginForm

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,6 +7,8 @@
   "Log in": "Войти",
   "Main": "Главная",
   "Page not found": "Страница не найдена",
+  "Password": "Пароль",
+  "Username": "Имя пользователя",
   "decrement": "Уменьшить",
   "increment": "Увеличить",
   "update page": "Обновить страницу",
