--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,6 +7,8 @@
   "Log in": "Log in",
   "Main": "Main",
   "Page not found": "Page not found",
+  "Password": "Password",
+  "Username": "Username",
   "decrement": "Decrement",
   "increment": "Increment",
   "update page": "Refresh the page",
