features\AuthByUsername  - Login State for app:    - loginSchema    - loginSlice with reducers (also for async)    - AsyncThunk loginByUsername    - selector for loginForm state    + added to store and StateSchema  - LoginForm:    - added custom title (+translations)    - added error-showing    - (for state:) onInputChange + input value    - button logic + isLoading

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "About": "About us",
+  "Auth Form": "Auth Form",
   "Error message": "Something went wrong!",
   "Language": "English",
   "Lng": "En",
