--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
   "About": "О проекте",
+  "Auth Form": "Форма авторизации",
   "Error message": "Что-то пошло не так!",
   "Language": "Русский",
   "Lng": "Ру",
