entities/User:  - add functionality to remember if logged in.  + user to local.storage features/AuthByUsername:  - close modal after Log in success widgets/Navbar:  - another version for logged in user + translates

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,6 +6,7 @@
   "Lng": "En",
   "Loading": "Loading...",
   "Log in": "Log in",
+  "Log out": "Log out",
   "Main": "Main",
   "Page not found": "Page not found",
   "Password": "Password",
