--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,6 +6,7 @@
   "Lng": "Ру",
   "Loading": "Загрузка...",
   "Log in": "Войти",
+  "Log out": "Выйти",
   "Main": "Главная",
   "Page not found": "Страница не найдена",
   "Password": "Пароль",
