better error for LoginForm with translations

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,6 +2,7 @@
   "About": "About us",
   "Auth Form": "Auth Form",
   "Error message": "Something went wrong!",
+  "Invalid username or password": "Invalid username or password",
   "Language": "English",
   "Lng": "En",
   "Loading": "Loading...",
