--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,7 @@
   "About": "О проекте",
   "Auth Form": "Форма авторизации",
   "Error message": "Что-то пошло не так!",
+  "Invalid username or password": "Неправильный логин или пароль",
   "Language": "Русский",
   "Lng": "Ру",
   "Loading": "Загрузка...",
