added ProfilePage to routeConfig

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,6 +11,7 @@
   "Main": "Main",
   "Page not found": "Page not found",
   "Password": "Password",
+  "Profile": "Profile",
   "Username": "Username",
   "decrement": "Decrement",
   "increment": "Increment",
