--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,6 +11,7 @@
   "Main": "Главная",
   "Page not found": "Страница не найдена",
   "Password": "Пароль",
+  "Profile": "Профиль",
   "Username": "Имя пользователя",
   "decrement": "Уменьшить",
   "increment": "Увеличить",
