entities/Profile:  - selectors for Profile store  - created ProfileCard + styles a little + translations  - added ProfileCard to ProfilePage

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,3 +1,7 @@
 {
-  "Profile page": "Profile page"
+  "Edit": "Edit",
+  "Profile": "Profile",
+  "Profile page": "Profile page",
+  "Your first name": "Your first name",
+  "Your last name": "Your last name"
 }
