--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -1,3 +1,7 @@
 {
-  "Profile page": "Страница пользователя"
+  "Edit": "Редактировать",
+  "Profile": "Профиль",
+  "Profile page": "Страница пользователя",
+  "Your first name": "Ваше имя",
+  "Your last name": "Ваша фамилия"
 }
